--- a/app.html
+++ b/app.html
@@ -3,7 +3,7 @@
 	<script type="text/javascript" src="./angular.min.js"></script>
 	<script type="text/javascript" src="./app.js"></script>
 </head>
-<body ng-controller="myCtrl as ctrl">
-	
+<body ng-controller="myCtrl">
+	<div unordered-list="{{products}}"></div>
 </body>
 </html>
