--- a/app.html
+++ b/app.html
@@ -10,7 +10,6 @@
 	<script type="text/javascript" src="./app.js"></script>
 </head>
 <body ng-controller="myCtrl">
-	<div unordered-list="{{products}}" list-source="products" ></div>
-	<div unordered-list="{{products}}" list-source="products" ></div>
+	<div  unordered-list="{{products}}" list-source="products" pa-demo="tianhang"></div>
 </body>
 </html>
